# ClassComp-Score

./: .roomodes  README.md  app.py  deploy.bat  pyproject.toml  serve.py  setup.py  verify_imports.py  wsgi.py
config/: gunicorn.conf.py  render.yaml  supabase_rls_setup.sql
docs/: DEPLOYMENT_GUIDE.md  DOCUMENTATION_RESTRUCTURE_PLAN.md  DOCUMENTATION_RESTRUCTURE_PLAN_V2.md  DYNAMIC_PERIOD_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  features.md  quick-start.md
docs/deployment/: DEPLOYMENT_STATUS.md  PRODUCTION_CHECKLIST.md  README.md  RLS_DEPLOYMENT_GUIDE.md  dynamic-period-guide.md  local-deployment.md  production-deployment.md
docs/development/: README.md
docs/development/implementation-plans/: dynamic-period-implementation.md  project-restructure.md
docs/user-guide/: README.md  admin-guide.md  dynamic-period-usage.md  info-commissioner-guide.md  new-media-officer-guide.md  officer-guide.md  teacher-guide.md
exports/: 评分表_202511.xlsx
scripts/: add_new_media_officer_support.py  alter_semester_config_tables.py  create_period_metadata_tables.py  create_semester_config.py  debug_class_sorting.py  init_db.py  migrate_existing_periods.py  pre_start.py  reset_password.py  test_dynamic_period.py  timezone_check.py
scripts/deployment/: check_environment.py  health_monitor.py  install_dependencies.py  setup_service.py
src/classcomp/: __init__.py
src/classcomp/constants/: __init__.py  security.py
src/classcomp/database/: __init__.py  classcomp.db  connection.py
src/classcomp/forms/: __init__.py  forms.py
src/classcomp/models/: __init__.py  (+1 more)
tests/: __init__.py
(+26 files in other folders)
